{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 149,
  "lineage": "0c5e5989-0997-3348-6195-adef2801fcf1",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:612162688656:instance/i-009ec540bdad91c8f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009ec540bdad91c8f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tien_trinh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd3e7ddf5c1acca3",
            "private_dns": "ip-10-0-3-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.50",
            "public_ip": "3.210.185.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02856fbe77e3d9bc7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0baba3599fb66b2ed",
            "tags": {
              "Name": "instance1"
            },
            "tags_all": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d961d6c92922aeb6"
            ]
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_security_group.allow_ssh",
            "module.ec2_instances.module.vpcs.aws_subnet.public_subnets",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "instance2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:612162688656:instance/i-07f20bca3d9f92434",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f20bca3d9f92434",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tien_trinh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8c525b1a4875662",
            "private_dns": "ip-10-0-4-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.157",
            "public_ip": "54.234.153.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-006e73436c8b3a169",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b022644679621f0c",
            "tags": {
              "Name": "instance2"
            },
            "tags_all": {
              "Name": "instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d961d6c92922aeb6"
            ]
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_security_group.allow_ssh",
            "module.ec2_instances.module.vpcs.aws_subnet.public_subnets",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:internet-gateway/igw-08efdfbc8f5791d38",
            "id": "igw-08efdfbc8f5791d38",
            "owner_id": "612162688656",
            "tags": {
              "Name": "Internet Gateway link to VPC: vpc-062d1bdd4fa76741d"
            },
            "tags_all": {
              "Name": "Internet Gateway link to VPC: vpc-062d1bdd4fa76741d"
            },
            "vpc_id": "vpc-062d1bdd4fa76741d"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_to_ps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:route-table/rtb-040fe41b38d594207",
            "id": "rtb-040fe41b38d594207",
            "owner_id": "612162688656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08efdfbc8f5791d38",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TienTV_Terraform_Route_Table"
            },
            "tags_all": {
              "Name": "TienTV_Terraform_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-062d1bdd4fa76741d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_internet_gateway.internet_gateway",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mapping1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0710dfa505c0d81d5",
            "route_table_id": "rtb-040fe41b38d594207",
            "subnet_id": "subnet-0baba3599fb66b2ed"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_internet_gateway.internet_gateway",
            "module.ec2_instances.module.vpcs.aws_route_table.rtb_to_ps",
            "module.ec2_instances.module.vpcs.aws_subnet.public_subnets",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "mapping2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf1ef3fba52dd289",
            "route_table_id": "rtb-040fe41b38d594207",
            "subnet_id": "subnet-0b022644679621f0c"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_internet_gateway.internet_gateway",
            "module.ec2_instances.module.vpcs.aws_route_table.rtb_to_ps",
            "module.ec2_instances.module.vpcs.aws_subnet.public_subnets",
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:security-group/sg-0d961d6c92922aeb6",
            "description": "Allow sshl inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d961d6c92922aeb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS to VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "612162688656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-062d1bdd4fa76741d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mapping1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:subnet/subnet-0baba3599fb66b2ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baba3599fb66b2ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612162688656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-062d1bdd4fa76741d"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        },
        {
          "index_key": "mapping2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:subnet/subnet-0b022644679621f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b022644679621f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "612162688656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-062d1bdd4fa76741d"
          },
          "dependencies": [
            "module.ec2_instances.module.vpcs.aws_vpc.vpcs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances.module.vpcs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:612162688656:vpc/vpc-062d1bdd4fa76741d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6a1d6d6a25b353c",
            "default_route_table_id": "rtb-01ec81e4dcc3047b8",
            "default_security_group_id": "sg-071aeeff9b22a3c1f",
            "dhcp_options_id": "dopt-9a0c3ee0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062d1bdd4fa76741d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ec81e4dcc3047b8",
            "owner_id": "612162688656",
            "tags": {
              "Name": "TienTV_Terraform_VPC"
            },
            "tags_all": {
              "Name": "TienTV_Terraform_VPC"
            }
          }
        }
      ]
    }
  ]
}